--- a/Index/index.css
+++ b/Index/index.css
@@ -1,3 +1,20 @@
+.nav-item {
+    margin-left: 2em;
+}
+
+.nav-item .active{
+    text-decoration: underline;
+}
+
+textarea {
+    height: 10em;
+}
+
 body {
     background-image: url('/Images/wallpaperflare.com_wallpaper.jpg');
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
