--- a/About/about.css
+++ b/About/about.css
@@ -18,3 +18,24 @@ body {
 textarea {
     height: 10em;
 }
+
+#google-maps-display img {
+    max-height: none;
+    max-width: none !important;
+    background: none !important;
+  }
+
+#google-maps-display {
+    height: 100%; 
+    width: 100%; 
+    max-width: 100%"
+}
+
+#google-maps-container {
+    max-width: 100%;
+    list-style: none;
+    transition: none;
+    overflow: hidden;
+    width: 500px;
+    height: 500px;
+}
