--- a/Shop/shop.css
+++ b/Shop/shop.css
@@ -28,6 +28,10 @@ body {
     background-size: cover;
 }
 
+#basketIcon {
+    font-size: 70px;
+}
+
 /* 
 Vissa Bilder är 235x235 istället för 300x300 
 Detta kanske förstör den responsiva designen av bootstrap
