Added Color Palette to README

--- a/About/about.css
+++ b/About/about.css
@@ -61,7 +61,7 @@ p, input {
     background-color: #03001C !important;
 }
 
-.border, .border-bottom, {
+.border, .border-bottom {
     border-color: #5B8FB9 !important;
 }
 
