--- a/Shop/shop.css
+++ b/Shop/shop.css
@@ -20,7 +20,7 @@ textarea {
 }
 
 body {
-  background-image: url("././Images/wallpaperflare.com_wallpaper.webp");
+  background-image: url("../../Images/wallpaperflare.com_wallpaper.webp");
 
   background-attachment: fixed;
   background-position: center;
