--- a/About/about.css
+++ b/About/about.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../Images/wallpaperflare.com_wallpaper.webp');
+    background-image: url('../Images/wallpaperflare.com_wallpaper.webp');
 
     background-attachment: fixed;
     background-position: center;
